--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@
 	<li class="test">5</li>
 </ul>
 
-<script src="../dist/example.js"></script>
+<script src="example.build.js"></script>
 
 </body>
 
